--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "* ~~endpoints~~ * mongo * auth",
   "main": "index.js",
   "scripts": {
-    "start": "export NODE_ENV=dev && nodemon server.js",
-    "test": "./node_modules/mocha/bin/mocha"
+    "start": "concurrently \"npm run client\" \"npm run server\"",
+    "test": "./node_modules/mocha/bin/mocha",
+    "client": "cd client && npm start",
+    "server": "export NODE_ENV=dev && nodemon app/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "concurrently": "^3.1.0",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
     "sinon-mongoose": "^1.3.0",
