--- a/client/package.json
+++ b/client/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "voting-front",
-  "version": "0.1.0",
+  "name": "async",
+  "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "babel-loader": "^6.2.10",
-    "d3": "^4.4.2",
-    "expect": "^1.20.2",
-    "karma": "^1.4.0",
-    "karma-cli": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-webpack": "^2.0.1",
-    "mocha": "^3.2.0",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.8.5",
-    "webpack": "^1.14.0"
+    "react-scripts": "^0.6.0",
+    "redux-logger": "^2.6.1"
   },
   "dependencies": {
-    "flux": "^3.1.2",
-    "react": "^15.4.2",
+    "d3": "^4.4.4",
+    "immutable": "^3.8.1",
+    "react": "^15.3.0",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1"
+    "react-d3-basic": "^1.6.11",
+    "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "react-redux-form": "^1.5.3",
+    "react-router-bootstrap": "^0.23.1",
+    "redux": "^3.5.2",
+    "redux-form": "^6.4.3",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001/"
